@@ -78,7 +78,7 @@
                     </p>
                 <a class="btn btn-info btn-cta" style="float: center;margin-top: 10px;" href="mailto:nlp@johnsnowlabs.com?subject=SparkNLP%20Slack%20access" target="_blank"> Questions? Join our Slack</a>
                 <b/><p/><p/>
-                <p><span class="label label-warning">2018 Dec 23rd - Update!</span> 1.8.1 Released! Dependency Parser, new Spell Checker, Spark 2.4.0, performance boosts and more!</p>
+                <p><span class="label label-warning">201 Jan 25th - Update!</span> 1.8.1 Released! New ML Sentence Detector, maven coordinates, bugfixes and more!</p>
             </div>
             <div id="cards-wrapper" class="cards-wrapper row">
                 <div class="item item-green col-md-4 col-sm-6 col-xs-6">
@@ -154,6 +154,3 @@
 <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
-
-
-
